# note_app

./: README.md  app.py  clean_dataset.ipynb  config.py  create_datasets.py  database.csv  get_model.py  leam.yml  manual_random.py  pyproject.toml  spie.pptx
.ipynb_checkpoints/: clean_dataset-checkpoint.ipynb
app/: __init__.py  forms.py  fun.py  routes.py
app/templates/: end.html  home.html  login.html  time.html
data/: CTvocab_clean  database.csv  empty.ipynb  output.csv
data/.ipynb_checkpoints/: empty-checkpoint.ipynb
data/model_iteration/: .index
model/: AL_utils.py  LEAM.py  SWEM.py  create_class_name.ipynb  databse_random.ipynb  get_auc.py  get_model.py  model.py  new_dict_updt.p  utils.py
model/.ipynb_checkpoints/: create_class_name-checkpoint.ipynb  databse_random-checkpoint.ipynb
model/kidney/: auc.csv  initial_auc.p  max_auc.csv  train.p
model/kidney/model/: .index
model/random_sampling/: CTvocab_clean  M0.p  all_valid_reports.p  create database.csv.ipynb  database.csv  test.p
model/random_sampling/.ipynb_checkpoints/: create database.csv-checkpoint.ipynb  create_dataset-checkpoint.ipynb
src/note_labeler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/note_labeler/app/: __init__.py  forms.py  fun.py  routes.py
src/note_labeler/app/templates/: base.html  index.html
src/note_labeler/initialize/: create_datasets.py  get_model.py  init_app.py  utils.py
src/note_labeler/model/: AL_utils.py  get_auc.py  train_model.py  utils.py
