[tool.poetry]
name = "note_labeler"
version = "0.1.0"
description = ""
authors = ["matiasbenitez91 <matias.benitez.91@hotmail.com>"]
homepage="https://github.com/matiasbenitez91/note_app"
repository="https://github.com/matiasbenitez91/note_app"
packages=[{include="note_labeler", from="src"},]

[tool.poetry.dependencies]
python = "2.7.10"
flask = "1.0.2"
tensorflow = "1.4"
flask-wtf = "0.14"
mock = "2.0"
pandas = "0.23"
werkzeug = "0.14."
scipy = "0.18.1"
scikit-learn = "0.18"
matplotlib = "2.0"
functools32 = "^3.2.3"
nltk = "3.0"
gensim = "3.0"
argparse = "^1.4.0"
pathlib = "^1.0.1"
smart_open = "1.8.1"
flask-classy = "^0.6.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
